--- a/nginx.j2
+++ b/nginx.j2
@@ -5,6 +5,9 @@ server {
     gzip_types text/plain application/json;
     gzip_comp_level 2;
 
+    access_log /var/log/nginx/{{ api_host_name }}.access.log;
+    error_log /var/log/nginx/{{ api_host_name }}.error.log error;
+
     location /api {
         proxy_pass http://127.0.0.1:8801;
         proxy_set_header Host $host;
