--- a/nginx.j2
+++ b/nginx.j2
@@ -8,13 +8,13 @@ server {
     access_log /var/log/nginx/{{ api_host_name }}.access.log;
     error_log /var/log/nginx/{{ api_host_name }}.error.log error;
 
-    location ~ ^/api/(auth|push-token) {
+    location ~ ^/api/(auth|push-token|profile) {
         proxy_pass http://127.0.0.1:8801;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
     }
-    location ~ ^/api/score {
+    location ~ ^/api/(score|leaders) {
         proxy_pass http://127.0.0.1:8810;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
