--- a/nginx.j2
+++ b/nginx.j2
@@ -20,6 +20,12 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
     }
+    location ~ ^/api/(daily-challenge) {
+        proxy_pass http://127.0.0.1:8820;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
     listen 443 ssl;
     ssl_certificate /etc/letsencrypt/live/{{ api_host_name }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ api_host_name }}/privkey.pem;
